@@ -1,0 +1,22 @@
+Trace: 3 == 1 ? FALSE at ifand2.sl:7
+Trace: 3 == 3 ? TRUE at ifand2.sl:12
+Trace: 4 == 4 ? TRUE at ifand2.sl:12
+Always True 2
+Trace: 3 == 1 ? FALSE at ifand2.sl:17
+Trace: 3 == 3 ? TRUE at ifand2.sl:22
+Trace: 4 == 4 ? TRUE at ifand2.sl:22
+Always True 4
+Trace: 3 == 3 ? TRUE at ifand2.sl:27
+Trace: 4 == 4 ? TRUE at ifand2.sl:27
+Always True 5
+Trace: -isnumber 5 ? TRUE at ifand2.sl:32
+Trace: 6 == 6 ? TRUE at ifand2.sl:32
+Test?
+Trace: -isnumber 5 ? TRUE at ifand2.sl:37
+Trace: -isnumber 7 ? TRUE at ifand2.sl:37
+I should be true as well
+Warning: Attempted to use non-existent predicate: -inumber at ifand2.sl:42
+Trace: 3 == 4 ? FALSE at ifand2.sl:47
+Trace: 5 == 5 ? TRUE at ifand2.sl:50
+Trace: -isnumber 10 ? TRUE at ifand2.sl:53
+Definetly true
