@@ -1,0 +1,5 @@
+Read: this is a test
+Read: 1
+Read: @('a', 'b', @('c', 'd', 'e'))
+Read: &closure[readobj.sl:9]#1 (function, will invoke!)
+Hello World!
